--- a/src/app/listrestaurant/listrestaurant.component.html
+++ b/src/app/listrestaurant/listrestaurant.component.html
@@ -3,7 +3,7 @@
       <tr>
         <th scope="col">Email</th>
         <th scope="col">Name</th>
-        <th scope="col">Password </th>
+        <th scope="col">Address </th>
         <th scope="col">Action </th>
       </tr>
     </thead>
@@ -11,7 +11,7 @@
         <tr>
             <td>EMAIL</td>
             <td>NAME</td>
-            <td>PASSWORD</td>
+            <td>ADDRESS</td>
             <td>
                 <a routerLink="/updaterestaurant">
                     <i class="fa fa-edit" style="font-size:28px;color:#000"></i>
@@ -23,7 +23,7 @@
       <tr *ngFor='let restaurant of collectiondatar'>
         <td>{{restaurant.email}}</td>
         <td>{{restaurant.name}}</td>
-        <td>{{restaurant.password}}</td>
+        <td>{{restaurant.address}}</td>
         <td>
             <a routerLink="/updaterestaurant/{{restaurant.email}}}">
                 <i class="fa fa-edit" style="font-size:28px;color:#000"></i>
