--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,1 +1,26 @@
-<p>register works!</p>
+<h1 class="text-center m-4">Register</h1>
+
+<!-- <div *ngIf="alert" class="alert alert-success alert-dismissible fade show m-4" role="alert">
+    <strong>REGISTERED SUCCESFULLY</strong> Thank You..!
+    <button (click)="alertClose()" type="button" class="close" data-dismiss="alert" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div> -->
+  <!-- [formGroup]="addRestaurant" (ngSubmit)="creatRest()" -->
+<form >
+    <div class="form-group m-4" >
+        <label for="exampleInputEmail1">Name</label>
+        <input type="text" class="form-control" placeholder="Name" formControlName="name">
+      </div>
+    <div class="form-group m-4">
+      <label for="exampleInputEmail1">Email</label>
+      <input type="email" class="form-control" placeholder="Email" formControlName="email">
+    </div>
+    <div class="form-group m-4">
+        <label for="exampleInputEmail1">Password</label>
+        <input type="password" class="form-control" placeholder="Password" formControlName="password">
+      </div>
+
+
+    <button type="submit" class="btn btn-primary m-4 m">Submit</button>
+  </form>
