--- a/src/app/updaterestaurant/updaterestaurant.component.html
+++ b/src/app/updaterestaurant/updaterestaurant.component.html
@@ -7,7 +7,7 @@
     </button>
   </div>
 
-<form [formGroup]="updateRestaurant">
+<form [formGroup]="editRestaurant" (ngSubmit)="updateRestaurantLatestData()">
     <div class="form-group m-4" >
         <label for="exampleInputEmail1">Name</label>
         <input type="text" class="form-control" placeholder="Name" formControlName="name">
@@ -17,8 +17,8 @@
       <input type="email" class="form-control" placeholder="Email" formControlName="email">
     </div>
     <div class="form-group m-4">
-        <label for="exampleInputEmail1">Password</label>
-        <input type="password" class="form-control" placeholder="Password" formControlName="password">
+        <label for="exampleInputEmail1">Address</label>
+        <input type="text" class="form-control" placeholder="Address" formControlName="address">
       </div>
 
 
