--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,12 @@
-<p>login works!</p>
+<h1 class="text-center m-4">Login</h1>
+<form >
+    <div class="form-group m-4">
+      <label for="exampleInputEmail1">Email</label>
+      <input type="email" class="form-control" placeholder="Email" [(ngModel)]="email">
+    </div>
+    <div class="form-group m-4">
+        <label for="exampleInputPassword1">Password</label>
+        <input type="password" class="form-control" placeholder="Password" [(ngModel)]="password">
+      </div>
+    <button type="submit" class="btn btn-primary m-4 m" (click)="login()">Submit</button>
+  </form>
