--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,14 +1,13 @@
 <h1 class="text-center m-4">Register</h1>
 
-<!-- <div *ngIf="alert" class="alert alert-success alert-dismissible fade show m-4" role="alert">
+<div *ngIf="alert" class="alert alert-success alert-dismissible fade show m-4" role="alert">
     <strong>REGISTERED SUCCESFULLY</strong> Thank You..!
     <button (click)="alertClose()" type="button" class="close" data-dismiss="alert" aria-label="Close">
       <span aria-hidden="true">&times;</span>
     </button>
-  </div> -->
-  <!-- [formGroup]="addRestaurant" (ngSubmit)="creatRest()" -->
-<form >
-    <div class="form-group m-4" >
+  </div>
+<form [formGroup]="addUser" (ngSubmit)="registerUser()">
+    <div class="form-group m-4" [formGroup]="addUser" (ngSubmit)="registerUser()">
         <label for="exampleInputEmail1">Name</label>
         <input type="text" class="form-control" placeholder="Name" formControlName="name">
       </div>
@@ -20,7 +19,5 @@
         <label for="exampleInputEmail1">Password</label>
         <input type="password" class="form-control" placeholder="Password" formControlName="password">
       </div>
-
-
     <button type="submit" class="btn btn-primary m-4 m">Submit</button>
   </form>
