--- a/src/app/listuser/listuser.component.html
+++ b/src/app/listuser/listuser.component.html
@@ -3,20 +3,12 @@
       <tr>
         <th scope="col">Email</th>
         <th scope="col">Name</th>
-        <th scope="col">Password </th>
       </tr>
     </thead>
-    <tbody *ngIf ='this.collectiondata'>
-        <tr>
-            <td>ddd</td>
-            <td>ff</td>
-            <td>ff</td>
-          </tr>
-        <!-- ?.docs -->
-      <tr *ngFor='let user of collectiondata'>
+    <tbody>
+      <tr *ngFor='let user of collectiondata.users'>
         <td>{{user.email}}</td>
         <td>{{user.name}}</td>
-        <td>{{user.password}}</td>
       </tr>
     </tbody>
   </table>
