--- a/src/app/addrestaurant/addrestaurant.component.html
+++ b/src/app/addrestaurant/addrestaurant.component.html
@@ -10,15 +10,15 @@
 <form [formGroup]="addRestaurant" (ngSubmit)="creatRest()">
     <div class="form-group m-4" >
         <label for="exampleInputEmail1">Name</label>
-        <input type="text" class="form-control" placeholder="Name" formControlName="name">
+        <input type="text" class="form-control" name="name" placeholder="Name" formControlName="name">
       </div>
     <div class="form-group m-4">
       <label for="exampleInputEmail1">Email</label>
-      <input type="email" class="form-control" placeholder="Email" formControlName="email">
+      <input type="email" class="form-control" name="email" placeholder="Email" formControlName="email">
     </div>
     <div class="form-group m-4">
         <label for="exampleInputEmail1">Address</label>
-        <input type="text" class="form-control" placeholder="Address" formControlName="address">
+        <input type="text" class="form-control" name="address" placeholder="Address" formControlName="address">
       </div>
 
 
