--- a/src/app/listrestaurant/listrestaurant.component.html
+++ b/src/app/listrestaurant/listrestaurant.component.html
@@ -1,6 +1,14 @@
+<div *ngIf="alert" class="alert alert-danger alert-dismissible fade show m-4" role="alert">
+  <strong>DATA DELETED SUCCESFULLY</strong>
+  <button (click)="alertClose()" type="button" class="close" data-dismiss="alert" aria-label="Close">
+    <span aria-hidden="true">&times;</span>
+  </button>
+</div>
+
 <table class="table m-4">
     <thead>
       <tr>
+        <th scope="col">#</th>
         <th scope="col">Email</th>
         <th scope="col">Name</th>
         <th scope="col">Address </th>
@@ -9,6 +17,7 @@
     </thead>
     <tbody>
         <tr>
+            <td>1</td>
             <td>EMAIL</td>
             <td>NAME</td>
             <td>ADDRESS</td>
@@ -20,15 +29,16 @@
             </td>
           </tr>
         <!-- ?.docs -->
-      <tr *ngFor='let restaurant of collectiondatar'>
+      <tr *ngFor='let restaurant of collectiondatarest.restaurants'>
+        <td>{{restaurant.id}}</td>
         <td>{{restaurant.email}}</td>
         <td>{{restaurant.name}}</td>
         <td>{{restaurant.address}}</td>
         <td>
-            <a routerLink="/updaterestaurant/{{restaurant.email}}}">
+            <a routerLink="/updaterestaurant/{{restaurant.id}}}">
                 <i class="fa fa-edit" style="font-size:28px;color:#000"></i>
             </a> &nbsp;
-            <i class="fa fa-trash-o" style="font-size:28px;color:red"></i>
+            <i class="fa fa-trash-o" style="font-size:28px;color:red" (click)="deletRestuarent(restaurant)"></i>
         </td>
       </tr>
     </tbody>
