--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,12 +1,13 @@
-<h1 class="text-center m-4">Login</h1>
-<form >
+<h1 class="text-center m-4">Login</h1>  
+<form class="container">
     <div class="form-group m-4">
       <label for="exampleInputEmail1">Email</label>
-      <input type="email" class="form-control" placeholder="Email" [(ngModel)]="email">
+      <input type="email" class="form-control" name="email" placeholder="Email" [(ngModel)]="email">
     </div>
     <div class="form-group m-4">
         <label for="exampleInputPassword1">Password</label>
-        <input type="password" class="form-control" placeholder="Password" [(ngModel)]="password">
+        <input type="password" class="form-control" name="password"  placeholder="Password" [(ngModel)]="password">
       </div>
-    <button type="submit" class="btn btn-primary m-4 m" (click)="login()">Submit</button>
+    <button type="submit" class="btn btn-primary m-4 m"(click)="login()" >Submit</button>
   </form>
+  <!--  -->
